--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,24 +10,24 @@ readme = "README.md"
 requires-python = ">=3.12"
 
 dependencies = [
-    "click>=8.3.0",
-    "faiss-cpu>=1.12.0",
-    "flask>=3.1.2",
-    "langchain-community>=0.3.31",
-    "langchain-openai>=0.3.35",
-    "langchain>=0.3.27",
-    "pangea-sdk>=6.8.0",
-    "pydantic>=2.12.3",
-    "python-dotenv>=1.1.1",
-    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
-    "python-magic>=0.4.27",
-    "unstructured[md]>=0.18.15",
+    "click==8.3.0",
+    "faiss-cpu==1.12.0",
+    "flask==3.1.2",
+    "langchain-community==0.3.31",
+    "langchain-openai==0.3.35",
+    "langchain==0.3.27",
+    "pangea-sdk==6.8.0",
+    "pydantic==2.12.3",
+    "python-dotenv==1.1.1",
+    "python-magic-bin==0.4.14; platform_system == 'Windows'",
+    "python-magic==0.4.27",
+    "unstructured[md]==0.18.15",
 ]
 
 [tool.uv]
 dev-dependencies = [
-    "mypy>=1.18.2",
-    "ruff>=0.14.2",
+    "mypy==1.18.2",
+    "ruff==0.14.2",
 ]
 
 [tool.ruff]
